@@ -20,6 +20,7 @@ Version 0.3l
 * Fixed a bug in elven nectar scene.
 * Fixed some Cale typos.
 * Fixed exp to level for Terry and Miranda.
+* Added a print of total items kept for alchemy recipes (good for checking how many you can make, or what you are missing).
 
 --------------------------------------------
              PREVIOUS VERSIONS
